@@ -1,3 +1,8 @@
+2006-02-09  Peter Dennis Bartok  <pbartok@novell.com>
+
+	* Image.cs, Bitmap.cs: Removed unneeded casts
+	* Icon.cs: Fixed code to be 64bit safe
+
 2006-01-31 Jordi Mas i Hernandez <jordimash@gmail.com>
 
 	* Font.cs: Fixes 77407
